--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,6 +5,7 @@
 @import '@fontsource/poppins/600.css';
 @import '@fontsource/poppins/700.css';
 @import '@fontsource/poppins/800.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -31,4 +32,8 @@
       }
    }
   }
+}
+
+body{
+  cursor: url('@/assets/cursor.png'),auto;
 }
