--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,10 +1,19 @@
 //out:false
-@import '@fontsource/poppins/300.css';
-@import '@fontsource/poppins/400.css';
-@import '@fontsource/poppins/500.css';
-@import '@fontsource/poppins/600.css';
-@import '@fontsource/poppins/700.css';
-@import '@fontsource/poppins/800.css';
+// @import '@fontsource/poppins/300.css';
+// @import '@fontsource/poppins/400.css';
+// @import '@fontsource/poppins/500.css';
+// @import '@fontsource/poppins/600.css';
+// @import '@fontsource/poppins/700.css';
+// @import '@fontsource/poppins/800.css';
+
+@import '@fontsource/lexend-deca/300.css';
+@import '@fontsource/lexend-deca/400.css';
+@import '@fontsource/lexend-deca/500.css';
+@import '@fontsource/lexend-deca/600.css';
+@import '@fontsource/lexend-deca/700.css';
+@import '@fontsource/lexend-deca/800.css';
+
+// @import '@fontsource-variable/lexend-deca';
 
 @tailwind base;
 @tailwind components;
