--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,37 +4,28 @@
 @import '@fontsource/lexend-deca/600.css';
 @import '@fontsource/lexend-deca/700.css';
 @import '@fontsource/lexend-deca/800.css';
-
-// @import '@fontsource-variable/lexend-deca';
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-@layer base{
-  :root{
+@layer base {
+  :root {
     --color-bkg: #222222;
-    
     --color-content: #f5f5f5;
   }
-  a{
+  a {
     @apply text-gray-500;
     transition: color 250ms ease-in-out;
-    &:hover{
-      color: black;
-    }
   }
-  :is(:where(.dark)){
-   a{
-      @apply text-gray-400;
-      &:hover{
-         @apply text-white;
-      }
-   }
+  a:hover {
+    color: black;
+  }
+  :is(:where(.dark)) a {
+    @apply text-gray-400;
+  }
+  :is(:where(.dark)) a:hover {
+    @apply text-white;
   }
 }
-
-body{
-  cursor: url('@/assets/cursor.png'),auto;
+body {
+  cursor: url('@/assets/cursor.png'), auto;
 }
